[project]
name = "convolution-visualization"
version = "1.0.0"
description = "Interactive 1D Convolution Visualization - Correlation vs Convolution"
authors = [
    {name = "Your Name", email = "rmisegal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/rmisegal/L8-CorollationVsConvulation"
Repository = "https://github.com/rmisegal/L8-CorollationVsConvulation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
